--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "dev": "netlify dev",
+    "prod": " netlify deploy --prod "
   },
   "keywords": [],
   "author": "andrei",
@@ -13,7 +15,8 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "mysql2": "^3.14.1"
+    "mysql2": "^3.14.1",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "dotenv": "^16.5.0",
